# hidapi

./: .gitignore  Makefile.am  configure.ac
pc/: hidapi-usbdk.pc.in
usbdk/: Makefile.am  Makefile.mingw  hid.c
